@@ -1,5 +1,5 @@
 /*
- * Copyright 2003-2016 JetBrains s.r.o.
+ * Copyright 2003-2025 JetBrains s.r.o.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,42 +23,38 @@ import com.intellij.openapi.project.DumbAware;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.Disposer;
 import com.intellij.openapi.vfs.VirtualFile;
-import jetbrains.mps.fileTypes.MPSFileTypeFactory;
-import jetbrains.mps.ide.editor.MPSFileNodeEditor.NodeFileComputable;
+import jetbrains.mps.ide.project.ProjectHelper;
+import jetbrains.mps.logging.Logger;
+import jetbrains.mps.nodefs.MPSNodeVirtualFile;
 import jetbrains.mps.openapi.editor.EditorState;
 import jetbrains.mps.project.MPSProject;
-import jetbrains.mps.smodel.ModelAccessHelper;
-import jetbrains.mps.nodefs.MPSNodeVirtualFile;
-import org.apache.log4j.LogManager;
-import org.apache.log4j.Logger;
 import org.jdom.Element;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.mps.openapi.module.SRepository;
 
 public class MPSFileNodeEditorProvider implements FileEditorProvider, DumbAware {
-  private static final Logger LOG = LogManager.getLogger(MPSFileNodeEditorProvider.class);
-
   private static final String CLASS = "class";
 
   @Override
   public boolean accept(@NotNull Project project, @NotNull VirtualFile file) {
-    return file instanceof MPSNodeVirtualFile || file.getFileType() == MPSFileTypeFactory.MPS_ROOT_FILE_TYPE;
+    return file instanceof MPSNodeVirtualFile;
   }
 
   @Override
   @NotNull
   public FileEditor createEditor(@NotNull Project project, @NotNull final VirtualFile file) {
-    final MPSProject mpsProject = project.getComponent(MPSProject.class);
-    SRepository repository = mpsProject.getRepository();
-    MPSNodeVirtualFile mpsNodeVirtualFile = file instanceof MPSNodeVirtualFile
-      ? (MPSNodeVirtualFile) file
-      : new ModelAccessHelper(repository).runReadAction(new NodeFileComputable(repository, file));
-    return mpsNodeVirtualFile != null ? new MPSFileNodeEditor(mpsProject,  mpsNodeVirtualFile) : new MPSFileNodeEditor(mpsProject,  file);
+    final MPSProject mpsProject = ProjectHelper.fromIdeaProjectOrFail(project);
+    if (!(file instanceof MPSNodeVirtualFile)) {
+      throw new IllegalArgumentException("expecting only our node virtual files");
+    }
+    final MPSFileNodeEditor mpsFileNodeEditor = new MPSFileNodeEditor(mpsProject, (MPSNodeVirtualFile) file);
+    EditorTrackService.getInstance(project).editorCreated(mpsFileNodeEditor);
+    return mpsFileNodeEditor;
   }
 
   @Override
   public void disposeEditor(@NotNull FileEditor editor) {
+    // I'd love to notify EditorTrackService, but there's no project to get its instance, and I don't want any hacks to get one
     Disposer.dispose(editor);
   }
 
@@ -66,27 +62,31 @@ public class MPSFileNodeEditorProvider implements FileEditorProvider, DumbAware 
   @NotNull
   public FileEditorState readState(@NotNull Element sourceElement, @NotNull Project project, @NotNull VirtualFile file) {
     String className = sourceElement.getAttributeValue(CLASS);
-    if (className == null) return FileEditorState.INSTANCE;
+    if (className == null) {
+      return FileEditorState.INSTANCE;
+    }
 
     try {
-      Class cls = Class.forName(className);
-      EditorState instance = (EditorState) cls.newInstance();
+      Class<? extends EditorState> cls = (Class<EditorState>) Class.forName(className);
+      EditorState instance = cls.getDeclaredConstructor().newInstance();
       instance.load(sourceElement);
       MPSEditorStateWrapper result = new MPSEditorStateWrapper();
       result.setEditorState(instance);
       return result;
-    } catch (ClassNotFoundException e){
+    } catch (ClassNotFoundException e) {
       //do nothing - class is not there anymore
     } catch (Throwable t) {
-      LOG.error(null, t);
-    } 
+      Logger.getLogger(MPSFileNodeEditorProvider.class).error(t);
+    }
 
     return FileEditorState.INSTANCE;
   }
 
   @Override
   public void writeState(@NotNull FileEditorState state, @NotNull Project project, @NotNull Element targetElement) {
-    if (!(state instanceof MPSEditorStateWrapper)) return;
+    if (!(state instanceof MPSEditorStateWrapper)) {
+      return;
+    }
 
     MPSEditorStateWrapper wrapper = (MPSEditorStateWrapper) state;
     EditorState editorState = wrapper.getEditorState();
